# mommy

./: .gitignore  .prettierrc.json  pyproject.toml
mommy/: app.py  configurar.py  models.py
tests/: conftest.py  test_app.py
tests/db/: test_tipo_meses.py  test_tipo_pecas.py  test_tipo_usuarios.py  test_validar_usuarios.py
tests/db/functions/: povoar.py
