[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.poetry]
name = "mommy"
version = "0.3.0"
description = "Projeto “web” criado para ser o responsável por gerenciar os lucros do trabalho da minha mãe."
authors = ["Felipe Alves <alvesgfelipe@tuta.io>"]
license = "MIT"

[tool.poetry.dependencies]
email-validator = "^1.3.0"
flask = "^2.2.2"
flask-assets = "^2.0"
flask-bcrypt = "^1.0.1"
flask-login = "^0.6.2"
flask-sqlalchemy = "^3.0.2"
flask-wtf = "^1.0.1"
mysqlclient = "^2.1.1"
python = "^3.11"
python-dateutil = "^2.8.2"
python-dotenv = "^0.21.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
pytest = "^7.2.0"
pytest-flask = "^1.2.0"

[tool.pytest.ini_options]
pythonpath = [".", "mommy"]
